--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,8 +8,8 @@ sites:
     url: https://www.google.com
   - name: Wikipedia
     url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
+  - name: Singapore
+    url: https://singapore.cloudhowto.tech
   - name: Broken Site
     url: https://thissitedoesnotexist.com
   - name: Secret Site
