--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: cheney-yan # Your GitHub username
+owner: uptime # Your GitHub username
 repo: upptime # Your Github repository name
 
 # Add your sites here
