--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: cheney-yan # Your GitHub username
-repo: upptime # Your Github repository name
+repo: uptime # Your Github repository name
 
 # Add your sites here
 sites:
